SQL/AzureVM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string"
    },
    "adminUsername": {
      "type": "string"
    },
    "adminPassword": {
      "type": "securestring"
    },
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.3.0/24"
    },
    "subnetPrefix": {
      "type": "string",
      "defaultValue":  "10.0.3.0/24"
    },
    "virtualMachines_academicgraph_name": {
      "type": "String"
    },
    "virtualMachines_academicclient_name": {
      "type": "String"
    },
    "networkInterfaces_academicgraph_nic_name": {
      "defaultValue": "academicgraph_nic",
      "type": "String"
    },
    "publicIPAddresses_academicgraph_ip_name": {
      "defaultValue": "academicgraph-ip",
      "type": "String"
    },
    "virtualNetworks_academicgraph_vnet_name": {
      "defaultValue": "academicgraph-vnet",
      "type": "String"
    },
    "networkInterfaces_academicclient_nic_name": {
      "defaultValue": "academicclient_nic",
      "type": "String"
    },
    "publicIPAddresses_academicclient_ip_name": {
      "defaultValue": "academicclient-ip",
      "type": "String"
    },
    "storageAccounts_academicgraphdiag_name": {
      "defaultValue": "academicgraphdiagstorage",
      "type": "String"
    },
    "networkSecurityGroups_academicgraph_nsg_name": {
      "defaultValue": "academicgraph-nsg",
      "type": "String"
    },
    "subnets_default_name": {
      "defaultValue": "default",
      "type": "String"
    },
    "securityRules_default_allow_rdp_name": {
      "defaultValue": "default-allow-rdp",
      "type": "String"
    },
    "securityRules_default_allow_rdp_name_1": {
      "defaultValue": "default-allow-rdp",
      "type": "String"
    }
  },
    "variables": {},
    "resources": [
      {
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[parameters('virtualMachines_academicclient_name')]",
        "apiVersion": "2017-03-30",
        "location": "[parameters('location')]",
        "scale": null,
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_E32s_v3"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "MicrosoftWindowsServer",
              "offer": "WindowsServer",
              "sku": "2016-Datacenter",
              "version": "latest"
            },
            "osDisk": {
              "osType": "Windows",
              "name": "[concat(parameters('virtualMachines_academicclient_name'),'_OsDisk')]",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Premium_LRS"
              }
            },
            "dataDisks": [
              {
                "lun": 0,
                "name": "Extract1",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 1,
                "name": "Extract2",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              }
            ]
          },
          "osProfile": {
            "computerName": "[parameters('virtualMachines_academicclient_name')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "windowsConfiguration": {
              "provisionVMAgent": true,
              "enableAutomaticUpdates": true
            },
            "secrets": []
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_academicclient_nic_name'))]"
              }
            ]
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[concat('https', '://', parameters('storageAccounts_academicgraphdiag_name'), '.blob.core.windows.net', '/')]"
            }
          }
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_academicclient_nic_name'))]",
          "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_academicgraphdiag_name'))]"
        ]
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[parameters('virtualMachines_academicgraph_name')]",
        "apiVersion": "2017-03-30",
        "location": "[parameters('location')]",
        "scale": null,
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_E32s_v3"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "MicrosoftSQLServer",
              "offer": "SQL2017-WS2016",
              "sku": "Enterprise",
              "version": "latest"
            },
            "osDisk": {
              "osType": "Windows",
              "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_OsDisk')]",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Premium_LRS"
              },
              "diskSizeGB": 128
            },
            "dataDisks": [
              {
                "lun": 0,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk1')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 1,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk2')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 2,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk3')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 3,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk4')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 4,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk5')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 5,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_datadisk6')]",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 6,
                "name": "ExtractedFiles",
                "createOption": "Empty",
                "caching": "ReadOnly",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1023
              },
              {
                "lun": 7,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_LDF1')]",
                "createOption": "Empty",
                "caching": "None",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1024
              },
              {
                "lun": 8,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_LDF2')]",
                "createOption": "Empty",
                "caching": "None",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1024
              },
              {
                "lun": 9,
                "name": "[concat(parameters('virtualMachines_academicgraph_name'),'_LDF3')]",
                "createOption": "Empty",
                "caching": "None",
                "managedDisk": {
                  "storageAccountType": "Premium_LRS"
                },
                "diskSizeGB": 1024
              }
            ]
          },
          "osProfile": {
            "computerName": "[parameters('virtualMachines_academicgraph_name')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "windowsConfiguration": {
              "provisionVMAgent": true,
              "enableAutomaticUpdates": true
            },
            "secrets": []
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_academicgraph_nic_name'))]"
              }
            ]
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[concat('https', '://', parameters('storageAccounts_academicgraphdiag_name'), '.blob.core.windows.net', '/')]"
            }
          }
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_academicgraph_nic_name'))]",
          "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_academicgraphdiag_name'))]"
        ]
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[parameters('networkInterfaces_academicclient_nic_name')]",
        "apiVersion": "2017-06-01",
        "location": "[parameters('location')]",
        "scale": null,
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_academicclient_ip_name'))]"
                },
                "subnet": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_academicgraph_vnet_name'), parameters('subnets_default_name'))]"
                }
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_academicgraph_nsg_name'))]"
          }
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_academicclient_ip_name'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_academicgraph_nsg_name'))]"
        ]
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[parameters('networkInterfaces_academicgraph_nic_name')]",
        "apiVersion": "2017-06-01",
        "location": "[parameters('location')]",
        "scale": null,
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_academicgraph_ip_name'))]"
                },
                "subnet": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_academicgraph_vnet_name'), parameters('subnets_default_name'))]"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_academicgraph_nsg_name'))]"
          }
        },
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_academicgraph_ip_name'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_academicgraph_nsg_name'))]"
        ]
      },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_academicgraph_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "scale": null,
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[parameters('publicIPAddresses_academicclient_ip_name')]",
        "apiVersion": "2017-06-01",
        "location": "[parameters('location')]",
        "scale": null,
        "properties": {
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Dynamic",
          "idleTimeoutInMinutes": 4,
          "dnsSettings": {
            "domainNameLabel": "[toLower(parameters('virtualMachines_academicclient_name'))]"
          }
        }
      },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_academicgraph_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "scale": null,
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
              "dnsSettings": {
                "domainNameLabel": "[toLower(parameters('virtualMachines_academicgraph_name'))]"
              }
            }
        },
        {
          "apiVersion": "2015-06-15",
          "type": "Microsoft.Network/virtualNetworks",
          "name": "[parameters('virtualNetworks_academicgraph_vnet_name')]",
          "location": "[parameters('location')]",
          "properties": {
            "addressSpace": {
              "addressPrefixes": [
                "[parameters('addressPrefix')]"
              ]
            },
            "subnets": [              
              {
                "name": "[parameters('subnets_default_name')]",
                "properties": {
                  "addressPrefix": "[parameters('subnetPrefix')]"
                }
              }
            ]
          }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_academicgraphdiag_name')]",
            "apiVersion": "2017-06-01",
            "location": "[parameters('location')]",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_academicgraph_nsg_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_academicgraph_nsg_name'))]"
            ]
        }
    ]
}
